# Simple-RaG-Personal-Ai-Mentor

./: .gitignore  IMPROVEMENTS.md  README.md  main.py  pyproject.toml
app/chat/: chatbot.py  conversation.py
app/embeddings/: embedding_model.py
app/llm/: model.py
app/loaders/: document_loader.py
app/rag/: reranker.py  retriever.py  text_splitter.py  vector_store.py
app/ui/: gradio_ui.py
app/utils/: corpus_terms.py  preprocess.py
data/: README.md
data/Flutter Notes/: Flutter_Notes.md
data/React Native Notes/: React_Native_Interview_Knowledge_Base.md
scripts/: check_data_quality.py  ingest.py  restructure_markdown_kb.py  run_golden_eval.py  tune_retrieval_params.py
tests/: golden_helpers.py  golden_qa.json  test_chatbot.py  test_conversation.py  test_golden_e2e.py  test_golden_e2e_live.py  test_golden_retrieval.py
